# website

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  cv.docx
.requirements/: apt-requirements.txt  getreqs.sh  requirements.txt
content/blog/20260329-0000-hello-world/: index.md
content/notes/personal/algorithms/: latex-test.md  timeseries.md
content/notes/personal/misc/: 20241120-ontology.md  20241205-drones.md
content/notes/personal/recipes/: almás-pite.md
content/projects/: README.md
deploy/dev/: index.html
deploy/dev/js/: index.ts
scripts/: addlines.sh  creplace.sh  find.sh  new-blog-post.sh  styletags.sh
src/: blog.rs  deployutil.rs  general.rs  macros.rs  main.rs  markdown.rs  miscpages.rs  navbar.rs  notes.rs  pathpattern.rs  prelude.rs  primitives.rs
src/blog/: blog_date.rs  mod.rs
src/homepage/: mod.rs  tabs.rs
src/projects/: mod.rs  page.rs
src/templates/: header.html
static/: CNAME  index.html
static/css/: blog.css  main.css  std.css
static/js/: index.js
templates/: deployment-map.json  gator.html  language.html  notes.html
templates/blog/: blog-sidebar.html  blog.html  post.html
templates/general/: header.html  markdown.html  navbar TODO.js  navbar.html  navbar.json  sidebar.html
templates/homepage/: index.html
templates/homepage/tabs/: about-me-body.html  socials-tab-links.json  tab-links.json
templates/projects/: project-header.html  project-sidebar.html  project-template.html  projects-homepage.html
templates/projects/bodies/: 2020t_website.html
templates/projects/categories/: README.md
(+79 files in other folders)
